--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html lang="en">
+<head>
+    <title>Home</title>
+    <% include ./partial/head %>
+</head>
+<body>
+<header><% include ./partial/header %></header>
+<div class="row row-home">
+    <% store_array.forEach(function(store){ %>
+    <div class="col-sm-6 col-md-3">
+        <div class="thumbnail">
+            <a href="#" class="thumbnail">
+                <img class="img-store" src="holder.js/100%x180" alt=" ">
+            </a>
+            <div class="caption">
+                <center><h3><%=store.store_name%></h3></center>
+                <p><%=store.address%></p>
+                <p><a href="#" class="btn btn-primary btn-block" >View Details</a>
+            </div>
+        </div>
+    </div>
+    <%}) %>
+</div>
+</body>
 </html>
