--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -56,20 +56,18 @@
                         </button>
                         <ul class="dropdown-menu">
                             <% industry_array.forEach(function(industry){ %>
-                            <li><a href="#"><%=industry.category_name%></a></li>
+                            <li><a href="industry?type=<%=industry.industry_name%>"><%=industry.industry_name%></a></li>
                             <%})%>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
                             <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
                         </ul>
                     </div>
                 </div>
             </form>
             <ul class="nav navbar-nav navbar-right">
-                <li class="i-menu"><a href="#"><i class="fa fa-yelp "> Store</i></a></li>
-                <li class="i-menu"><a href="/search"><i class="fa fa-yelp "> Search</i></a></li>
+                <li class="i-menu"><a href="insert_store"><i class="fa fa-yelp ">Insert Store</i></a></li>
+                <li class="i-menu"><a href="index"><i class="fa fa-yelp ">Home</i></a></li>
+                <li class="i-menu"><a href="search"><i class="fa fa-yelp "> Search</i></a></li>
             </ul>
-        </div><!-- /.navbar-collapse -->
+        </div>
     </div>
 </nav>
