--- a/views/partial/head.ejs
+++ b/views/partial/head.ejs
@@ -17,3 +17,7 @@
 <link rel="stylesheet" href="./libs/Bootflat/bootflat/css/bootflat.min.css">
 <!--style-->
 <link rel="stylesheet" href="./stylesheets/style.css"/>
+<!--map-->
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
+<link rel="stylesheet" href="../stylesheets/map.css"/>
+<script src="./js/map.js"></script>
