--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -65,7 +65,7 @@
             </form>
             <ul class="nav navbar-nav navbar-right">
                 <li class="i-menu"><a href="insert_store"><i class="fa fa-yelp ">Insert Store</i></a></li>
-                <li class="i-menu"><a href="index"><i class="fa fa-yelp ">Home</i></a></li>
+                <li class="i-menu"><a href="/"><i class="fa fa-yelp ">Home</i></a></li>
                 <li class="i-menu"><a href="search"><i class="fa fa-yelp "> Search</i></a></li>
             </ul>
         </div>
