--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -56,7 +56,7 @@
                         </button>
                         <ul class="dropdown-menu">
                             <% industry_array.forEach(function(industry){ %>
-                            <li><a href="industry?type=<%=industry.industry_name%>"><%=industry.industry_name%></a></li>
+                            <li><a href="industry_search?type=<%=industry.industry_name%>"><%=industry.industry_name%></a></li>
                             <%})%>
                             <li class="divider"></li>
                         </ul>
