--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,7 @@
                 </p>
 
                 <p><a href="store_detail?id=<%= store._id %>" class="btn btn-primary btn-block">View Details</a>
+                <p><a href="edit_store?id=<%= store._id %>" class="btn btn-primary btn-block">Edit store</a>
             </div>
         </div>
     </div>
