--- a/views/insert_store.ejs
+++ b/views/insert_store.ejs
@@ -44,7 +44,7 @@
                     </div>
 
                     <div class="col-md-4 input_insertstore">
-                        <input type="file" required name="ulflOGO" ONCHANGE="show_logo(this)" accept="image/*"
+                        <input type="file" required name="ulfLogo" ONCHANGE="show_logo(this)" accept="image/*"
                                alt="Cover image"
                                class="form-control input_insertstore">
                     </div>
