--- a/views/edit_store.ejs
+++ b/views/edit_store.ejs
@@ -1,7 +1,232 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <% include ./partial/head %>
+<% include ./partial/head %>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
+<script>
+var geocoder;
+var map;
+var lat;
+var long;
+var marker;
+function initialize() {
+    geocoder = new google.maps.Geocoder();
+    var mapOptions = {
+        zoom: 20
+    };
+    map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(function (position) {
+            <% store_array.forEach(function(s){ %>
+            var pos = new google.maps.LatLng(<%=s.latitude%>, <%=s.longitude%>);
+
+            //Set vào 2 biến này.
+            lat = <%=s.latitude%>;
+            long = <%=s.longitude%>;
+            <%})%>
+            marker = new google.maps.Marker({
+                draggable: true,
+                position: pos,
+                map: map,
+                title: 'Bạn đang ở đây?',
+                animation: google.maps.Animation.DROP,
+                anchor: new google.maps.Point(0, 49)
+
+            });
+            google.maps.event.addListener(marker, 'drag', function (a) {
+                var elem = document.getElementById("a");
+                elem.value = a.latLng.lat().toFixed(7);
+                var elem = document.getElementById("o");
+                elem.value = a.latLng.lng().toFixed(7);
+            });
+
+            map.setCenter(pos);
+        }, function () {
+            handleNoGeolocation(true);
+        });
+    } else {
+        handleNoGeolocation(false);
+    }
+    getLatLong();
+
+    google.maps.event.addListener(map, "click", function (event) {
+        var lat = event.latLng.lat();
+        var lng = event.latLng.lng();
+
+        marker.setMap(null);
+
+        var pos = new google.maps.LatLng(lat, lng);
+
+        marker = new google.maps.Marker({
+            draggable: true,
+            position: pos,
+            map: map,
+            title: "Bạn ở đây?",
+            raiseOnDrag: false,
+            animation: google.maps.Animation.DROP
+        });
+
+        google.maps.event.addListener(marker, 'drag', function (a) {
+            var elem = document.getElementById("a");
+            elem.value = a.latLng.lat().toFixed(7);
+            var elem = document.getElementById("o");
+            elem.value = a.latLng.lng().toFixed(7);
+        });
+
+        var elem = document.getElementById("a");
+        elem.value = lat.toFixed(7);
+        var elem = document.getElementById("o");
+        elem.value = lng.toFixed(7);
+    });
+
+    var input = (document.getElementById('pac-input'));
+    var click = (document.getElementById('search'));
+    map.controls[google.maps.ControlPosition.TOP_RIGHT].push(click);
+    map.controls[google.maps.ControlPosition.TOP_RIGHT].push(input);
+    var autocomplete = new google.maps.places.Autocomplete(input);
+    autocomplete.bindTo('bounds', map);
+    var infowindow = new google.maps.InfoWindow();
+    marker = new google.maps.Marker({
+        map: map,
+        /*anchorPoint: new google.maps.Point(0, -29),*/
+        draggable: true,
+        position: pos,
+        title: "Bạn ở đây?",
+        raiseOnDrag: false,
+        animation: google.maps.Animation.DROP
+    });
+
+    //Event place_changed cho textbox autocomplete
+    google.maps.event.addListener(autocomplete, 'place_changed', function () {
+        alert("her");
+        infowindow.close();
+        marker.setVisible(false);
+        var place = autocomplete.getPlace();
+        if (!place.geometry) {
+            return;
+        }
+
+        // If the place has a geometry, then present it on a map.
+        if (place.geometry.viewport) {
+            map.fitBounds(place.geometry.viewport);
+        } else {
+            map.setCenter(place.geometry.location);
+            map.setZoom(20);  // Why 17? Because it looks good.
+        }
+
+        marker = new google.maps.Marker({
+            draggable: true,
+            position: pos,
+            map: map,
+            title: "Bạn ở đây?",
+            raiseOnDrag: false,
+            animation: google.maps.Animation.DROP
+        });
+
+        /*google.maps.event.addListener(marker, 'drag', function(a) {
+         var elem = document.getElementById("a");
+         elem.value = a.latLng.lat().toFixed(7);
+         var elem = document.getElementById("o");
+         elem.value = a.latLng.lng().toFixed(7);
+         });*/
+
+        marker.setPosition(place.geometry.location);
+        var elem = document.getElementById("a");
+        elem.value = place.geometry.location.lat().toFixed(7);
+        var elem = document.getElementById("o");
+        elem.value = place.geometry.location.lng().toFixed(7);
+        marker.setVisible(true);
+
+        var address = '';
+        if (place.address_components) {
+            address = [
+                (place.address_components[0] && place.address_components[0].short_name || ''),
+                (place.address_components[1] && place.address_components[1].short_name || ''),
+                (place.address_components[2] && place.address_components[2].short_name || '')
+            ].join(' ');
+        }
+
+        infowindow.setContent('<div><strong>' + place.name + '</strong><br>' + address);
+        infowindow.open(map, marker);
+    });
+} //Hết init
+function toggleBounce() {
+
+    if (marker.getAnimation() != null) {
+        marker.setAnimation(null);
+    } else {
+        marker.setAnimation(google.maps.Animation.BOUNCE);
+    }
+}
+//Kiểm tra xem trình duyệt có hỗ trợ geolocation không?
+function handleNoGeolocation(errorFlag) {
+    if (errorFlag) {
+        var content = 'Error: The Geolocation service failed.';
+    } else {
+        var content = 'Error: Your browser doesn\'t support geolocation.';
+    }
+    var options = {
+        map: map,
+        position: new google.maps.LatLng(60, 105),
+        content: content
+    };
+    map.setCenter(options.position);
+}
+
+//Lấy lat, lng.
+function getLatLong() {
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(showPosition);
+    } else {
+        alert("Geolocation is not supported by this browser.");
+    }
+}
+
+function showPosition(position) {
+    //Set lat và long xuống textbox.
+    /*var elem = document.getElementById("a");
+     elem.value = position.coords.latitude;
+     var elem = document.getElementById("o");
+     elem.value = position.coords.longitude;*/
+}
+
+function codeAddress() {
+    var address = document.getElementById('pac-input').value;
+    geocoder.geocode({ 'address': address}, function (results, status) {
+        if (status == google.maps.GeocoderStatus.OK) {
+            var elem = document.getElementById("a");
+            elem.value = results[0].geometry.location.lat().toFixed(7);
+            var elem = document.getElementById("o");
+            elem.value = results[0].geometry.location.lng().toFixed(7);
+
+            pos = new google.maps.LatLng(results[0].geometry.location.lat(), results[0].geometry.location.lng());
+
+            map.setCenter(results[0].geometry.location);
+            marker.setVisible(false);
+            marker = new google.maps.Marker({
+                draggable: true,
+                position: pos,
+                map: map,
+                title: "Bạn ở đây?",
+                raiseOnDrag: false,
+                animation: google.maps.Animation.DROP
+            });
+
+            google.maps.event.addListener(marker, 'drag', function (a) {
+                var elem = document.getElementById("a");
+                elem.value = a.latLng.lat().toFixed(7);
+                var elem = document.getElementById("o");
+                elem.value = a.latLng.lng().toFixed(7);
+            });
+        } else {
+            alert('Geocode was not successful for the following reason: ' + status);
+        }
+    });
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+</script>
 </head>
 <body>
 <header>
@@ -9,6 +234,7 @@
 </header>
 <div class="container insert_container">
     <center>
+        <% store_array.forEach(function (store) { %>
         <div class="col-md-12">
             <div class="row">
                 <form action="" method="post" enctype="multipart/form-data">
@@ -24,7 +250,7 @@
                                class="form-control  ">
                     </div>
                     <div class="col-md-12">
-                        <input type="button" value="Location"  onclick="codeAddress()"
+                        <input type="button" value="Location" onclick="codeAddress()"
                                class="btn btn-primary btn-block input_insertstore ">
                     </div>
                     <input id="pac-input" type="text" value="" placeholder="Enter a location">
@@ -32,63 +258,67 @@
 
                     <div class="col-md-12">
                         <input type="text" required name="txtStoreName" placeholder="Tên cửa hàng"
-                               class="form-control  input_insertstore">
+                               class="form-control  input_insertstore" value="<%= store.store_name %>">
                     </div>
                     <div class="col-md-4 input_insertstore">
-                        <input type="file" required name="ulfCover" ONCHANGE="show_cover(this)" accept="image/*"
+                        <input type="file" name="ulfCover" ONCHANGE="show_cover(this)" accept="image/*"
                                alt="Cover image"
                                class="form-control">
                     </div>
                     <div class="col-md-2 input_insertstore">
-                        <img class="img-thumbnil" id="thumbnil" src="" alt="Cover image">
+                        <img class="img-thumbnil" id="thumbnil" src="<%= store.cover %>" alt="Cover image">
                     </div>
 
                     <div class="col-md-4 input_insertstore">
-                        <input type="file" required name="ulfLogo" ONCHANGE="show_logo(this)" accept="image/*"
+                        <input type="file" name="ulfLogo" ONCHANGE="show_logo(this)" accept="image/*"
                                alt="Cover image"
                                class="form-control input_insertstore">
                     </div>
                     <div class="col-md-2 input_insertstore">
-                        <img class="img-thumbnil" id="thumbnil2" src="" alt="Logo image">
+                        <img class="img-thumbnil" id="thumbnil2" src="<%= store.logo %>" alt="Logo image">
                     </div>
                     <div class="col-md-12">
                         <input type="text" required name="txtWebsite" placeholder="Website"
-                               class="form-control input_insertstore">
+                               class="form-control input_insertstore" value="<%= store.website %>">
                     </div>
                     <div class="col-md-12">
                         <input type="text" required name="txtFanpage" placeholder="Facebook fanpage url"
-                               class="form-control  input_insertstore">
+                               class="form-control  input_insertstore" value="<%= store.fanpage %>">
+                    </div>
+
+                    <% store.address.forEach(function (address) { %>
+                    <div class="col-md-6">
+                        <input type="text" required name="txtCity" placeholder="Thành Phố"
+                               class="form-control input_insertstore" value="<%= address.city %>">
                     </div>
                     <div class="col-md-6">
-                        <input type="text" required name="txtCity" placeholder="Thành phố"
-                               class="form-control input_insertstore">
+                        <input type="text" required name="txtDistrict" placeholder="Quận/Huyện"
+                               class="form-control  input_insertstore" value="<%= address.district %>">
                     </div>
                     <div class="col-md-6">
-                        <input type="text" required name="txtDistrict" placeholder="quận/huyện"
-                               class="form-control  input_insertstore">
+                        <input type="text" required name="txtStreet" placeholder="Số/Đường"
+                               class="form-control input_insertstore" value="<%= address.street %>">
                     </div>
-                    <div class="col-md-6">
-                        <input type="text" required name="txtAdrress1" placeholder="Địa chỉ 1"
-                               class="form-control input_insertstore">
-                    </div>
-                    <div class="col-md-6">
-                        <input type="text" required name="txtAdrress2" placeholder="Địa chỉ 2"
-                               class="form-control input_insertstore">
+                    <% }) %>
+                    <div class=" col-md-12">
+                        <input type="text" required name="txtPhone" placeholder="Số Điện Thoại"
+                               class="form-control  input_insertstore" value="<%= store.phone %>">
                     </div>
                     <div class="col-md-12">
-                        <input type="text" required name="txtPhone" placeholder="Số điện thoại"
-                               class="form-control  input_insertstore">
+                        <input type="text" required name="txtHoursOfWork" placeholder="Giờ làm việc"
+                               class="form-control input_insertstore" value="<%= store.hours_of_work %>">
                     </div>
                     <div class="col-md-12">
-                        <input type="text" required name="txtHouresOfWork" placeholder="Giờ làm việc"
-                               class="form-control input_insertstore">
-                    </div>
-                    <div class="col-md-12">
-                        <select name="slcIndustry"  class="size-selcter form-control size-selcter selecter_1 input_insertstore">
+                        <select name="slcIndustry"
+                                class="size-selcter form-control size-selcter selecter_1 input_insertstore">
                             <% if(typeof industry_array != "undefined"){
-                            industry_array.forEach(function(industry){ %>
-                            <option  value="<%= industry.industry_name %>"><%= industry.industry_name %></option>
-                            <% })} %>
+                                    industry_array.forEach(function(industry){ %>
+                            <% if(industry.industry_name == store.industry){ %>
+                            <option value="<%= industry.industry_name %>"
+                                    selected><%= industry.industry_name %></option>
+                            <% }else{ %>
+                            <option value="<%= industry.industry_name %>"><%= industry.industry_name %></option>
+                            <% }})} %>
                         </select>
                     </div>
                     <div class="col-md-12">
@@ -97,8 +327,8 @@
                 </form>
             </div>
         </div>
+        <% }) %>
     </center>
-
 </div>
 <footer>
     <% include ./partial/footer %>
