Thêm description vào edit và insert store.

--- a/views/insert_store.ejs
+++ b/views/insert_store.ejs
@@ -53,6 +53,10 @@
                         <img class="img-thumbnil" id="thumbnil2" src="" alt="Logo image">
                     </div>
                     <div class="col-md-12">
+                        <textarea required name="txtDescription" placeholder="Tự giới thiệu."
+                                  class="form-control input_insertstore"></textarea>
+                    </div>
+                    <div class="col-md-12">
                         <input type="text" required name="txtWebsite" placeholder="Website"
                                class="form-control input_insertstore">
                     </div>
