--- a/views/edit_store.ejs
+++ b/views/edit_store.ejs
@@ -268,7 +268,6 @@ google.maps.event.addDomListener(window, 'load', initialize);
                     <div class="col-md-2 input_insertstore">
                         <img class="img-thumbnil" id="thumbnil" src="<%= store.cover %>" alt="Cover image">
                     </div>
-
                     <div class="col-md-4 input_insertstore">
                         <input type="file" name="ulfLogo" ONCHANGE="show_logo(this)" accept="image/*"
                                alt="Cover image"
@@ -276,6 +275,10 @@ google.maps.event.addDomListener(window, 'load', initialize);
                     </div>
                     <div class="col-md-2 input_insertstore">
                         <img class="img-thumbnil" id="thumbnil2" src="<%= store.logo %>" alt="Logo image">
+                    </div>
+                    <div class="col-md-12">
+                        <textarea required name="txtDescription" placeholder="Tự giới thiệu."
+                               class="form-control input_insertstore"><%= store.website %></textarea>
                     </div>
                     <div class="col-md-12">
                         <input type="text" required name="txtWebsite" placeholder="Website"
