--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -941,7 +941,7 @@ img {
 .carousel-inner > .item > a > img {
   display: block;
   max-width: 100%;
-  height: auto;
+  /*height: auto;*/
 }
 .img-rounded {
   border-radius: 6px;
@@ -4670,11 +4670,11 @@ a.badge:focus {
        -o-transition: border .2s ease-in-out;
           transition: border .2s ease-in-out;
 }
-.thumbnail > img,
-.thumbnail a > img {
-  margin-right: auto;
-  margin-left: auto;
-}
+/*.thumbnail > img,*/
+/*.thumbnail a > img {*/
+  /*margin-right: auto;*/
+  /*margin-left: auto;*/
+/*}*/
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
