--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,11 @@
 body {
+    padding: 50px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
     background-color: #F2F1EF;
 }
-
+a:hover{
+    color: #E9573F;
+}
 /*nav bar*/
 .img-softer{
     max-width: 45px;
@@ -15,11 +18,28 @@ body {
     border-right: 1px #ffffff groove;
 }
 .row-home{
-    margin-top: 5em;
+    /*margin-top: 3em;*/
+    padding-top: 3em;
+    height: 800px;
+    width: 200px;
+    float: left;
+    margin-left: 50px;
+}
+.row-container{
+    /*margin-left: 3%;*/
 }
 .img-store{
     max-height: 337px;
     max-width: 337px;
+}
+.img-logo{
+    position: absolute;
+    height: 60px;
+    width: 60px;
+    border-radius: 30px ;
+    margin-top: -40px;
+    margin-left: 70px;
+
 }
 .col-search{
     margin-top: 3em;
@@ -39,11 +59,4 @@ body {
 .size-selcter{
     font-size: 15px;
     font-family: Georgia, "Times New Roman", Times, serif;
-}
-.img-thumbnil{
-    height: 100%;
-    width: 100%;
-}
-.map-insertstore{
-    padding-top: 5em;
 }
