Fix vài bug nhỏ.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
 
                 <p>
                     <% store.address.forEach(function (a) { %>
-                    <%= a.address + ", " + a.district + ", " + a.city %>
+                    <%= a.street + ", " + a.district + ", " + a.city %>
                     <% }) %>
                 </p>
 
