--- a/views/edit_store.ejs
+++ b/views/edit_store.ejs
@@ -24,6 +24,10 @@ function initialize() {
             //Set vào 2 biến này.
             lat = <%=s.latitude%>;
             long = <%=s.longitude%>;
+            var elem = document.getElementById("a");
+            elem.value =lat.toFixed(7);
+            var elem = document.getElementById("o");
+            elem.value = long.toFixed(7);
             <%})%>
             marker = new google.maps.Marker({
                 draggable: true,
@@ -246,7 +250,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
                                class="form-control">
                     </div>
                     <div class="col-md-6 input_insertstore">
-                        <input type="text" id="o" name="txtLongtitude"
+                        <input type="text" id="o" name="txtLongitude"
                                class="form-control  ">
                     </div>
                     <div class="col-md-12">
@@ -278,7 +282,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
                     </div>
                     <div class="col-md-12">
                         <textarea required name="txtDescription" placeholder="Tự giới thiệu."
-                               class="form-control input_insertstore"><%= store.website %></textarea>
+                               class="form-control input_insertstore"><%= store.description %></textarea>
                     </div>
                     <div class="col-md-12">
                         <input type="text" required name="txtWebsite" placeholder="Website"
