--- a/views/insert_store.ejs
+++ b/views/insert_store.ejs
@@ -21,7 +21,7 @@
                                class="form-control">
                     </div>
                     <div class="col-md-6 input_insertstore">
-                        <input type="text" id="o" name="txtLongtitude"
+                        <input type="text" id="o" name="txtLongitude"
                                class="form-control  ">
                     </div>
                     <div class="col-md-12">
@@ -64,22 +64,20 @@
                         <input type="text" required name="txtFanpage" placeholder="Facebook fanpage url"
                                class="form-control  input_insertstore">
                     </div>
+                    <input type="hidden" value="1" name="txtCountAddress">
                     <div class="col-md-6">
-                        <input type="text" required name="txtCity" placeholder="Thành phố"
+                        <input type="text" required name="txtCity1" placeholder="Thành phố"
                                class="form-control input_insertstore">
                     </div>
                     <div class="col-md-6">
-                        <input type="text" required name="txtDistrict" placeholder="quận/huyện"
+                        <input type="text" required name="txtDistrict1" placeholder="Quận/Huyện"
                                class="form-control  input_insertstore">
                     </div>
                     <div class="col-md-6">
-                        <input type="text" required name="txtAdrress1" placeholder="Địa chỉ 1"
+                        <input type="text" required name="txtStreet1" placeholder="Số/ Đường"
                                class="form-control input_insertstore">
                     </div>
-                    <div class="col-md-6">
-                        <input type="text" required name="txtAdrress2" placeholder="Địa chỉ 2"
-                               class="form-control input_insertstore">
-                    </div>
+
                     <div class="col-md-12">
                         <input type="text" required name="txtPhone" placeholder="Số điện thoại"
                                class="form-control  input_insertstore">
