Fix edit và insert thiếu giờ làm việc và sai địa chỉ (đổi lại thành street, district và city).

--- a/views/insert_store.ejs
+++ b/views/insert_store.ejs
@@ -66,15 +66,15 @@
                     </div>
                     <input type="hidden" value="1" name="txtCountAddress">
                     <div class="col-md-6">
-                        <input type="text" required name="txtCity1" placeholder="Thành phố"
+                        <input type="text" required name="txtCity" placeholder="Thành phố"
                                class="form-control input_insertstore">
                     </div>
                     <div class="col-md-6">
-                        <input type="text" required name="txtDistrict1" placeholder="Quận/Huyện"
+                        <input type="text" required name="txtDistrict" placeholder="Quận/Huyện"
                                class="form-control  input_insertstore">
                     </div>
                     <div class="col-md-6">
-                        <input type="text" required name="txtStreet1" placeholder="Số/ Đường"
+                        <input type="text" required name="txtStreet" placeholder="Số/ Đường"
                                class="form-control input_insertstore">
                     </div>
 
@@ -83,7 +83,7 @@
                                class="form-control  input_insertstore">
                     </div>
                     <div class="col-md-12">
-                        <input type="text" required name="txtHouresOfWork" placeholder="Giờ làm việc"
+                        <input type="text" required name="txtHoursOfWork" placeholder="Giờ làm việc"
                                class="form-control input_insertstore">
                     </div>
                     <div class="col-md-12">
