--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index">
                 <img class="img-softer" src="./images/template/logo-blue.png" />
 
             </a>
