Thay đổi resize image.
Thêm trang insert_product.ejs (chưa có đẹp).

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -60,3 +60,7 @@ a:hover{
     font-size: 15px;
     font-family: Georgia, "Times New Roman", Times, serif;
 }
+.img-thumbnil{
+    height: 100%;
+    width: 100%;
+}
