--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,11 +16,11 @@
                 <img class="img-store" src="<%= store.cover %>" alt=" ">
                 <img class="img-logo" src="<%= store.logo %>">
 
-                <center><a href="store_detail?id=<%= store._id %>"><h3><%= store.store_name %></h3></a></center>
+                <center><a href="store_detail?id=<%= store._id %>"><h4><%= store.store_name %></h4></a></center>
 
                 <p>
                     <% store.address.forEach(function (a) { %>
-                    <%= a.street + ", " + a.district + ", " + a.city %>
+                    <%= (a.street + ", " + a.district + ", " + a.city).substring(0, 50) %>... <a href="store_detail?id=<%= store._id %>">xem thêm</a>
                     <% }) %>
                 </p>
 
