--- a/views/store_detail.ejs
+++ b/views/store_detail.ejs
@@ -12,7 +12,10 @@
     <br>
     <% product_array.forEach(function(product){ %>
     <a href=edit_product?id=<%= product._id %>><%= product.product_name %></a>
-    <img src="<%= product.media[0].media_url%>">
+    <img src="<%= product.media[0].media_url %>" wid="100" height="100">
+    <% product.tags.forEach(function(tag){ %>
+    <a href="tags?tag=<%= tag %>"><%= tag %></a>
+    <% }) %>
     <br>
     <% }) %>
 </div>
