thêm store-details

--- a/views/store_detail.ejs
+++ b/views/store_detail.ejs
@@ -19,5 +19,84 @@
     <br>
     <% }) %>
 </div>
+<div class="container">
+    <div class="row row-storedetails">
+        <div class="col-md-12 col-storedetails">
+            <img style="width: 100%;" src="./images/template/a.jpg">
+            <img class="avt-store" src="./images/template/b.jpg">
+        </div>
+        <div class="col-md-12 store-details">
+            <center>
+                <p>
+
+                <h3>Store Name</h3></p>
+                <p>Số phone</p>
+
+                <p>Địa chỉ</p>
+
+                <p>Website</p>
+
+                <p>Decription</p>
+
+                <p>time of work</p>
+            </center>
+        </div>
+
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-3 ">
+                <a href="#" style="height: 300px;width: 220px;" data-toggle="modal" data-target=".bs-example-modal-lg">
+                    <div class="items-div">
+                        <i style="padding-top: 55%;padding-left: 43%"
+                           class="fa fa-plus-square fa-4x"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 ">
+                <center>
+                    <div class="items-div">
+                        <table>
+                            <tbody>
+                            <tr>
+                                <td colspan="3">
+                                    <center>
+                                        <a href="#"><img src="./images/template/c.jpg" class="img-up"></a>
+                                    </center>
+                                </td>
+                            </tr>
+                            <tr>
+                                <center>
+                                    <td class="tdDown"><a href="#"><img src="./images/template/d.jpg" class="img-prod"></a>
+                                    </td>
+                                    <td class="tdDown"><a href=""><img src="./images/template/e.jpg" class="img-prod"></a>
+                                    </td>
+                                    <td class="tdDown"><a href=""><img src="./images/template/g.jpg" class="img-prod"></a>
+                                    </td>
+                                </center>
+                            </tr>
+                            <tr>
+
+                                <td colspan="3">
+                                    <center>
+                                        <a href="edit_product?id=1" class="btn btn-primary"
+                                           style="width: 95% ; margin-top: 10px;">Edit
+                                            Product
+                                        </a>
+                                    </center>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </center>
+            </div>
+        </div>
+
+    </div>
+</div>
+<footer>
+    <% include ./partial/footer %>
+</footer>
 </body>
 </html>
