--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -84,3 +84,117 @@ a:hover{
     font-family: FontAwesome;
     color: #ffffff;
 }
+
+/*store details*/
+.col-storedetails {
+    /*height: 50%;*/
+    /*margin-top: 20px;*/
+    /*position: absolute;*/
+    /*background-image: url("../images/template/a.jpg");*/
+    /*opacity: 0.5;*/
+    /*height: 254px;*/
+}
+
+.avt-store {
+    width: 30%;
+    /*height: 40%;*/
+    /*border-radius: 150px;*/
+
+    /*Bo hình */
+    display: inline-block;
+    border: none;
+    overflow: hidden;
+    -webkit-border-radius: 200px;
+    -moz-border-radius: 200px;
+    border-radius: 200px;
+    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, .4);
+    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, .4);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .4);
+
+    top: 64%;
+    left: 35%;
+    position: absolute;
+
+}
+
+.store-details {
+    margin-top: 15%;
+    font-size: 14px;
+    font-family: FontAwesome;
+}
+
+.row-storedetails {
+    margin-top: 5%;
+    border: 1px;
+}
+
+.prod-show {
+
+    display: block;
+    padding: 10px;
+
+    margin-bottom: 20px;
+    line-height: 1.42857143;
+    background-color: #fff;
+    border-radius: 4px;
+    -webkit-transition: border .2s ease-in-out;
+    -o-transition: border .2s ease-in-out;
+    transition: border .2s ease-in-out;
+    height: 200px;
+    margin-top: 10%;
+}
+
+.i-prod {
+    margin-top: 45%;
+    margin-left: 34%;
+
+}
+
+.bg-prod {
+    background-color: #37BC9B;
+    /*opacity: 0.5;*/
+}
+
+.item {
+
+    display: inline-block;
+    /*padding:  1em;*/
+    width: 100%;
+}
+
+.items-div {
+    margin: 10% 5% 10% 5%;
+    float: left;
+    width: 220px;
+    height: 300px;
+    background-color: #E6E9ED;
+    border: 2px #bbb;
+
+}
+
+/*.items{*/
+/*margin: 14px 7px 0 10%;*/
+/*float: left;*/
+/*width: 220px;*/
+/*height: 300px;*/
+/*background-color: rgba(0, 0, 0, 0.20);*/
+/*border-radius: 6px;*/
+/*box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);*/
+/*background: #fff;*/
+
+/*}*/
+
+.img-prod {
+    width: 4em;
+    height: 4em;
+    border-radius: 5px;
+    margin-left: 10px;
+}
+
+.img-up {
+    width: 12em;
+    height: 12em;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
