Fix giao diện một tí.

--- a/views/insert_store.ejs
+++ b/views/insert_store.ejs
@@ -28,7 +28,7 @@
                         <input type="button" value="Location"  onclick="codeAddress()"
                                class="btn btn-primary btn-block input_insertstore ">
                     </div>
-                    <input id="pac-input" type="text" value="" placeholder="Enter a location">
+                    <input id="pac-input" type="text" value="Ho Chi Minh City, Ho Chi Minh, Vietnam" placeholder="Enter a location">
 
 
                     <div class="col-md-12">
@@ -64,16 +64,15 @@
                         <input type="text" required name="txtFanpage" placeholder="Facebook fanpage url"
                                class="form-control  input_insertstore">
                     </div>
-                    <input type="hidden" value="1" name="txtCountAddress">
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <input type="text" required name="txtCity" placeholder="Thành phố"
                                class="form-control input_insertstore">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <input type="text" required name="txtDistrict" placeholder="Quận/Huyện"
                                class="form-control  input_insertstore">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <input type="text" required name="txtStreet" placeholder="Số/ Đường"
                                class="form-control input_insertstore">
                     </div>
